[package]
name = "pippette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.58"
device_query = "1.1.1"
windows = { features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "pippette.exe"
LegalCopyright = "Copyright © Girkov Arpa 2022"
FileDescription = "Pippette: Minimalist color picker."
ProductName = "Pippette"
ProductVersion = "0.1.0"